Move ais into dungeon
First step in making this more monolithic, since I don't want
to focus on microservices for this project. For now, it's
done in a kind of stupid way but it will be cleaned up later.
