# dungeon/swagger.yml
@@ -24,11 +24,11 @@ paths:
             type: array
             items:
               properties:
-                x: 
+                x:
                   type: integer
-                y: 
+                y:
                   type: integer
-                type: 
+                type:
                   type: string
                 ai:
                   type: string
@@ -55,11 +55,11 @@ paths:
             type: array
             items:
               properties:
-                x: 
+                x:
                   type: integer
-                y: 
+                y:
                   type: integer
-                type: 
+                type:
                   type: string
                 ai:
                   type: string
@@ -95,11 +95,11 @@ paths:
             type: array
             items:
               properties:
-                x: 
+                x:
                   type: integer
-                y: 
+                y:
                   type: integer
-                looks_like: 
+                looks_like:
                   type: string
                 id:
                   type: string
@@ -124,9 +124,9 @@ paths:
             type: array
             items:
               properties:
-                id: 
+                id:
                   type: string
-                score: 
+                score:
                   type: integer
   /room/{room}/step:
     post:
@@ -155,3 +155,22 @@ paths:
           description: "Successful operation"
           schema:
             type: integer
+  /manual/agent/{agent}/setmove:
+    put:
+      operationId: "endpoint.manual_set_move"
+      summary: "Set the next action"
+      consumes:
+        - application/json
+      parameters:
+        - name: agent
+          in: path
+          required: true
+          type: string
+        - name: action
+          in: body
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: "Successful operation"
